--- a/ansible/roles/nfs_server/templates/exports.j2
+++ b/ansible/roles/nfs_server/templates/exports.j2
@@ -1,1 +1,1 @@
-/srv/nfs/ubuntu2204 192.168.1.0/24(rw,sync,no_subtree_check,no_root_squash)
+/srv/nfs/ubuntu2204 {{ hostvars['localhost']['ansible_' + compute_interface]['ipv4']['network'] }}/{{ hostvars['localhost']['ansible_' + compute_interface]['ipv4']['netmask'] }}(rw,sync,no_subtree_check,no_root_squash,fsid=0)
