--- a/ansible/roles/pxe_boot/templates/grub.cfg.j2
+++ b/ansible/roles/pxe_boot/templates/grub.cfg.j2
@@ -2,7 +2,7 @@ set timeout=1
 set default=0
 
 menuentry "Ubuntu 22.04 NFS Boot (Development)" {
-    linux /boot/grub/vmlinuz root=/dev/nfs nfsroot={{ hostvars['localhost']['ansible_' + compute_interface]['ipv4']['address'] }}:/srv/nfs/ubuntu2204 ip=dhcp ro quiet splash
+    linux /boot/grub/vmlinuz root=/dev/nfs nfsroot={{ hostvars['localhost']['ansible_' + compute_interface]['ipv4']['address'] }}:/srv/nfs/ubuntu2204 ip=dhcp quiet splash overlayroot=tmpfs
     initrd /boot/grub/initrd
 }
 
