--- a/ansible/roles/dnsmasq/templates/dnsmasq.conf.j2
+++ b/ansible/roles/dnsmasq/templates/dnsmasq.conf.j2
@@ -3,6 +3,11 @@ bind-interfaces
 dhcp-range={{ compute_interface }},192.168.1.50,192.168.1.100,12h
 dhcp-option=option:dns-server,8.8.8.8
 
+# Static DHCP assignments for compute nodes
+{% for node in compute_nodes %}
+dhcp-host={{ node.mac }},{{ node.ip }},{{ node.name }}
+{% endfor %}
+
 
 # Set the boot file for UEFI clients
 dhcp-match=set:efi-x86_64,option:client-arch,7
