--- a/ansible/roles/pxe_boot/templates/grub.cfg.j2
+++ b/ansible/roles/pxe_boot/templates/grub.cfg.j2
@@ -1,17 +1,7 @@
-set timeout=1
+set timeout=0
 set default=0
 
-menuentry "Ubuntu 22.04 NFS Boot (Development)" {
+menuentry "Ubuntu 22.04 NFS Boot" {
     linux /boot/grub/vmlinuz root=/dev/nfs nfsroot={{ hostvars['localhost']['ansible_' + compute_interface]['ipv4']['address'] }}:/srv/nfs/ubuntu2204 ip=dhcp quiet splash overlayroot=tmpfs
-    initrd /boot/grub/initrd
-}
-
-menuentry "Ubuntu 22.04 Live ISO Boot" {
-    linux /boot/grub/vmlinuz boot=casper netboot=url ip=dhcp url=http://{{ hostvars['localhost']['ansible_' + compute_interface]['ipv4']['address'] }}/ubuntu2204/ubuntu-22.04.4-live-server-amd64.iso quiet splash cloud-init=disabled
-    initrd /boot/grub/initrd
-}
-
-menuentry "Ubuntu 22.04 Autoinstall" {
-    linux /boot/grub/vmlinuz ip=dhcp url=http://{{ hostvars['localhost']['ansible_' + compute_interface]['ipv4']['address'] }}/ubuntu2204/ubuntu-22.04.4-live-server-amd64.iso autoinstall ds=nocloud-net;s=http://{{ hostvars['localhost']['ansible_' + compute_interface]['ipv4']['address'] }}/ubuntu2204/ ---
     initrd /boot/grub/initrd
 }
