proper image cleaning support and fixed control netplan config

--- a/ansible/roles/common/templates/99-onedotzero-compute.yaml.j2
+++ b/ansible/roles/common/templates/99-onedotzero-compute.yaml.j2
@@ -5,3 +5,6 @@ network:
       dhcp4: no
       addresses:
         - "{{ control_node_ip }}/24"
+      nameservers:
+        addresses:
+          - 8.8.8.8
