--- a/ansible/roles/hardware_specific/amd_vllm_build/templates/build_vllm.sh.j2
+++ b/ansible/roles/hardware_specific/amd_vllm_build/templates/build_vllm.sh.j2
@@ -1,7 +1,7 @@
 #!/bin/bash
 set -e # Exit immediately if a command exits with a non-zero status.
 
-export PYTORCH_ROCM_ARCH="{{ pytorch_rocm_arch }}"
+export PYTORCH_ROCM_ARCH="{{ rocm_arch }}"
 export CMAKE_ARGS="-DCMAKE_POLICY_VERSION_MINIMUM=3.5"
 
 source /opt/venvs/onedotzero/bin/activate
