[vllm] control node cpu build and Ray services

--- a/ansible/roles/control/nfs_server/templates/exports.j2
+++ b/ansible/roles/control/nfs_server/templates/exports.j2
@@ -1,1 +1,2 @@
 /srv/nfs/ubuntu_golden {{ compute_subnet }}.0/24(rw,sync,no_subtree_check,no_root_squash,fsid=0)
+/opt/models {{ compute_subnet }}.0/24(rw,sync,no_subtree_check,no_root_squash,fsid=0)
