--- a/ansible/roles/control/pxe_boot/templates/grub.cfg.j2
+++ b/ansible/roles/control/pxe_boot/templates/grub.cfg.j2
@@ -2,6 +2,6 @@ set timeout=0
 set default=0
 
 menuentry "Ubuntu 24.04 NFS Boot" {
-    linux /boot/grub/vmlinuz root=/dev/nfs nfsroot={{ control_node_ip }}:/srv/nfs/ubuntu_golden ip=dhcp quiet splash overlayroot=tmpfs
+    linux /boot/grub/vmlinuz root=/dev/nfs nfsroot={{ control_node_ip }}:{{ golden_image_nfs_dir }} ip=dhcp quiet splash overlayroot=tmpfs
     initrd /boot/grub/initrd
 }
